generalize some of the removal listener assertion checks
(cherry picked from commit 8105d30362c0f7a8ee34788cfceb08cd2514b6c5)